--- a/index.html
+++ b/index.html
@@ -20,7 +20,29 @@
 </head>
 <body class="main-content">
     <header class="section sec1 header active" id="home">
-
+        <div class="header-content">
+            <div class="left-header">
+                <div class="h-shape"></div>
+                <div class="image">
+                    <img src="./img/hero1.png" alt="hero">
+                </div>
+            </div>
+            <div class="right-header">
+                <h1 class="name">
+                   Hi, I'm <span>Vincenzo Iacona.</span>
+                   Web Developer.
+                </h1>
+                <p>
+                    I'm a Web Developer, This is my Portfolio. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis sunt laborum ut recusandae cum officia animi quaerat voluptate excepturi nesciunt nam reprehenderit nisi, quasi odio. Tempore aspernatur sequi accusamus maxime!
+                </p>
+                <div class="btn-con">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download CV</span>
+                        <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <section class="section sec2 about" id="about"></section>
