--- a/index.html
+++ b/index.html
@@ -45,7 +45,169 @@
         </div>
     </header>
     <main>
-        <section class="section sec2 about" id="about"></section>
+        <section class="section sec2 about" id="about">
+           <div class="main-title">
+               <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+           </div>
+           <div class="about-container">
+            <div class="left-about">
+               <h4>Information About me</h4> 
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, quos aliquam! Minus ipsum nostrum adipisci atque recusandae impedit ullam possimus laboriosam facilis quae ad illo sunt, cumque ratione corrupti. Dolorem? <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis cumque voluptatibus reiciendis a voluptas, eum recusandae adipisci dicta. Aut veritatis cumque recusandae officiis sed molestiae aliquid fugit veniam tempora necessitatibus!</p>
+               <div class="btn-con">
+                <a href="#" class="main-btn">
+                    <span class="btn-text">Download CV</span>
+                    <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
+                </a>
+            </div>
+            </div>
+            <div class="right-about">
+                <div class="about-item">
+                    <div class="abt-text">
+                        <p class="large-text">560+</p>
+                        <p class="small-text">Projects <br> Completed</p>
+                    </div>
+                </div>
+                <div class="about-item">
+                    <div class="abt-text">
+                        <p class="large-text">10+</p>
+                        <p class="small-text">Years of <br> Experience</p>
+                    </div>
+                </div>
+                <div class="about-item">
+                    <div class="abt-text">
+                        <p class="large-text">300+</p>
+                        <p class="small-text">Happy <br> Clients</p>
+                    </div>
+                </div>
+                <div class="about-item">
+                    <div class="abt-text">
+                        <p class="large-text">400+</p>
+                        <p class="small-text">Customer <br> Reviews</p>
+                    </div>
+                </div>
+            </div>
+           </div> 
+           <div class="about-stats">
+               <h4 class="stat-title">My Skills</h4>
+               <div class="progress-bars">
+                   <div class="progress-bar">
+                       <p class="prog-title">Html5</p>
+                       <div class="progress-con">
+                           <p class="prog-text">80%</p>
+                           <div class="progress">
+                               <span class="html"></span>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="progress-bar">
+                    <p class="prog-title">Css3</p>
+                    <div class="progress-con">
+                        <p class="prog-text">80%</p>
+                        <div class="progress">
+                            <span class="css"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="progress-bar">
+                    <p class="prog-title">Javascript</p>
+                    <div class="progress-con">
+                        <p class="prog-text">80%</p>
+                        <div class="progress">
+                            <span class="javascript"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="progress-bar">
+                    <p class="prog-title">React</p>
+                    <div class="progress-con">
+                        <p class="prog-text">70%</p>
+                        <div class="progress">
+                            <span class="react"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="progress-bar">
+                    <p class="prog-title">Php</p>
+                    <div class="progress-con">
+                        <p class="prog-text">70%</p>
+                        <div class="progress">
+                            <span class="php"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="progress-bar">
+                    <p class="prog-title">Laravel</p>
+                    <div class="progress-con">
+                        <p class="prog-text">80%</p>
+                        <div class="progress">
+                            <span class="laravel"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="progress-bar">
+                    <p class="prog-title">MySql</p>
+                    <div class="progress-con">
+                        <p class="prog-text">70%</p>
+                        <div class="progress">
+                            <span class="mysql"></span>
+                        </div>
+                    </div>
+                </div>
+               </div>
+           </div>
+           <h4 class="stat-title">My Timeline</h4>
+           <div class="timeline">
+               <div class="timeline-item">
+                   <div class="tl-icon">
+                    <i class="fa-solid fa-briefcase"></i> 
+                   </div>
+                   <p class="tl-duration">#OpenToWork</p>
+                   <h5>Web Developer <span> - ...</span></h5>
+                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus corporis vel sapiente. Beatae quidem eaque porro, modi quisquam voluptatibus inventore rem, earum eligendi suscipit quis adipisci iure! Non, quam eligendi!</p>
+               </div>
+               <div class="timeline-item">
+                <div class="tl-icon">
+                 <i class="fa-solid fa-briefcase"></i> 
+                </div>
+                <p class="tl-duration">#OpenToWork</p>
+                <h5>Web Developer <span> - ...</span></h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus corporis vel sapiente. Beatae quidem eaque porro, modi quisquam voluptatibus inventore rem, earum eligendi suscipit quis adipisci iure! Non, quam eligendi!</p>
+            </div>
+            <div class="timeline-item">
+                <div class="tl-icon">
+                 <i class="fa-solid fa-briefcase"></i> 
+                </div>
+                <p class="tl-duration">#OpenToWork</p>
+                <h5>Web Developer <span> - ...</span></h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus corporis vel sapiente. Beatae quidem eaque porro, modi quisquam voluptatibus inventore rem, earum eligendi suscipit quis adipisci iure! Non, quam eligendi!</p>
+            </div>
+            <div class="timeline-item">
+                <div class="tl-icon">
+                 <i class="fa-solid fa-briefcase"></i> 
+                </div>
+                <p class="tl-duration">#OpenToWork</p>
+                <h5>Web Developer <span> - ...</span></h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus corporis vel sapiente. Beatae quidem eaque porro, modi quisquam voluptatibus inventore rem, earum eligendi suscipit quis adipisci iure! Non, quam eligendi!</p>
+            </div>
+            <div class="timeline-item">
+                <div class="tl-icon">
+                 <i class="fa-solid fa-briefcase"></i> 
+                </div>
+                <p class="tl-duration">#OpenToWork</p>
+                <h5>Web Developer <span> - ...</span></h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus corporis vel sapiente. Beatae quidem eaque porro, modi quisquam voluptatibus inventore rem, earum eligendi suscipit quis adipisci iure! Non, quam eligendi!</p>
+            </div>
+            <div class="timeline-item">
+                <div class="tl-icon">
+                 <i class="fa-solid fa-briefcase"></i> 
+                </div>
+                <p class="tl-duration">#OpenToWork</p>
+                <h5>Web Developer <span> - ...</span></h5>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus corporis vel sapiente. Beatae quidem eaque porro, modi quisquam voluptatibus inventore rem, earum eligendi suscipit quis adipisci iure! Non, quam eligendi!</p>
+            </div>
+            
+           </div>
+        </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
