--- a/index.html
+++ b/index.html
@@ -208,7 +208,36 @@
             
            </div>
         </section>
-        <section class="section sec3 portfolio" id="portfolio"></section>
+        <section class="section sec3 portfolio" id="portfolio">
+            <div class="main-title">
+                <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
+            </div>
+            <p class="port-text">
+                Here is some of my work that I've done in various programming languages.
+            </p>
+            <div class="portfolios">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="./img/port1.jpg" alt="port1">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a class="icon" href="https://github.com/Iaconan" target="_blank">
+                                <i class="fa-brands fa-github"></i>
+                            </a>
+                            <a class="icon" href="https://www.linkedin.com/in/vincenzo-iacona-a89a35225?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BzY3NHAPMRdKpli%2BtQk7Hwg%3D%3D" target="_blank">
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                            <a class="icon" href="#" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
     </main>
