--- a/index.html
+++ b/index.html
@@ -238,7 +238,70 @@
                 </div>
             </div>
         </section>
-        <section class="section sec4 blogs" id="blogs"></section>
+        <section class="section sec4" id="blogs">
+            <div class="blogs-content">
+                <div class="main-title">
+                    <h2>My<span>Blogs</span><span class="bg-text">My Blogs</span></h2>
+                </div>
+                <div class="blogs">
+                    <div class="blog">
+                        <img src="./img/blog1.jpg" alt="blog1">
+                        <div class="blog-text">
+                            <h4>
+                                How to Create Your Own Website
+                            </h4>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste hic et accusamus facilis nam asperiores, maxime id quaerat dolores enim ad delectus, modi repudiandae veritatis facere itaque officia ipsa nostrum.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="./img/blog1.jpg" alt="blog1">
+                        <div class="blog-text">
+                            <h4>
+                                How to Create Your Own Website
+                            </h4>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste hic et accusamus facilis nam asperiores, maxime id quaerat dolores enim ad delectus, modi repudiandae veritatis facere itaque officia ipsa nostrum.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="./img/blog2.jpg" alt="blog1">
+                        <div class="blog-text">
+                            <h4>
+                                How to Create Your Own Website
+                            </h4>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste hic et accusamus facilis nam asperiores, maxime id quaerat dolores enim ad delectus, modi repudiandae veritatis facere itaque officia ipsa nostrum.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="./img/blog3.jpg" alt="blog1">
+                        <div class="blog-text">
+                            <h4>
+                                How to Create Your Own Website
+                            </h4>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste hic et accusamus facilis nam asperiores, maxime id quaerat dolores enim ad delectus, modi repudiandae veritatis facere itaque officia ipsa nostrum.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="blog">
+                        <img src="./img/blog3.jpg" alt="blog1">
+                        <div class="blog-text">
+                            <h4>
+                                How to Create Your Own Website
+                            </h4>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste hic et accusamus facilis nam asperiores, maxime id quaerat dolores enim ad delectus, modi repudiandae veritatis facere itaque officia ipsa nostrum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec5 contact" id="contact"></section>
     </main>
 
