--- a/index.html
+++ b/index.html
@@ -302,7 +302,93 @@
                 </div>
             </div>
         </section>
-        <section class="section sec5 contact" id="contact"></section>
+        <section class="section sec5" id="contact">
+            <div class="contact-container">
+                <div class="main-title">
+             <h2>Contact <span>Me</span> <span class="bg-text">My Blogs</span></h2>
+                </div>
+               <div class="contact-content-con">
+                   <div class="left-contact">
+                       <h4>Contact me here</h4>
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse amet accusantium exercitationem quos accusamus suscipit soluta veniam! Fugiat, expedita. Suscipit nostrum accusantium praesentium accusamus quas nam perferendis eum repellat necessitatibus.</p>
+                       <div class="contact-info">
+                           <div class="contact-item">
+                               <div class="icon">
+                                <i class="fa-solid fa-location-dot"></i>
+                                Location
+                               </div>
+                               <p>: Italy, Sicily</p>
+                           </div>
+                           <div class="contact-item">
+                            <div class="icon">
+                                <i class="fa-solid fa-earth-europe"></i>
+                             Languages
+                            </div>
+                            <p>
+                                <span>: Italian, English</span>
+                            </p>
+                        </div>
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fa-solid fa-phone"></i>
+                             Mobile Number
+                            </div>
+                            <p>
+                                <span>: +39 3207692333</span>
+                            </p>
+                        </div>
+                        <div class="contact-item">
+                            <div class="icon">
+                                <i class="fa-solid fa-envelope"></i>
+                             Email
+                            </div>
+                            <p>
+                                <span>: vincenzoiacona@hotmail.com</span>
+                            </p>
+                        </div>
+                       </div>
+                       <div class="contact-icons">
+                           <div class="contact-icon">
+                               <a href="#" target="_blank">
+                                <i class="fa-brands fa-github"></i>
+                               </a>
+                               <a href="#" target="_blank">
+                                <i class="fa-brands fa-youtube"></i>
+                               </a>
+                               <a href="#" target="_blank">
+                                <i class="fa-brands fa-twitter"></i>
+                               </a>
+                               <a href="#" target="_blank">
+                                <i class="fa-brands fa-facebook"></i>
+                               </a>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="right-contact">
+                       <form action="" class="contact-form">
+                           <div class="input-control i-c-2">
+                               <input type="text" required placeholder="Your Name">
+                               <input type="email" required placeholder="Your Email">
+                           </div>
+                           <div class="input-control">
+                            <input type="text" required placeholder="Enter Subject">
+                        </div>
+                        <div class="input-control">
+                            <textarea name="" id="" cols="15" rows="8" placeholder="Message here..."></textarea>
+                        </div>
+                        <div class="submit-btn">
+                            <a class="main-btn" href="#">
+                            <span class="btn-text">Download CV</span>
+                            <span class="btn-icon">
+                            <i class="fa-solid fa-download"></i> 
+                             </span>
+                            </a>
+                        </div>
+                       </form>
+                   </div>
+               </div> 
+            </div>
+        </section>
     </main>
 
     <div class="controlls">
